kubernetes-v2/personal/applications/commento/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: commento-http
  namespace: commento

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`commento.agrrh.com`)
      # middlewares:
      #   - name: request-headers
      #     namespace: kube-system
      services:
        - kind: Service
          name: commento
          namespace: commento
          port: 80
